--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Full Viewport Page</title>
-    <style>
-        html, body {
-            height: 100vh;
-            margin: 0;
-            background-color: white;
-            color: black;
-            font-family: Arial, sans-serif;
-        }
-    </style>
-</head>
-<body>
-    <h1>Hello, this page fills the viewport.</h1>
-</body>
-</html>
+{% extends 'base.html' %} {% block head %}
+<title>Task Master</title>
+{% endblock %} {% block body %}
+<div class="content">
+  <h1>Task Master</h1>
+
+  <table>
+    <tr>
+      <th>Task</th>
+      <th>Added</th>
+      <th>Actions</th>
+    </tr>
+    {% for task in tasks %}
+    <tr>
+      <td>{{ task.content }}</td>
+      <td>{{ task.date_created.date() }}</td>
+      <td>
+        <a href="/delete/{{task.id}}">Delete</a>
+        <br />
+        <a href="/update/{{task.id}}">Update</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </table>
+
+  <form action="/" method="POST">
+    <input type="text" name="content" id="content" placeholder="Do laundry" />
+    <input type="submit" value="Add Task" />
+  </form>
+</div>
+{% endblock %}
