Adding Bootsrap design

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,70 @@
 {% extends 'base.html' %} {% block head %}
 <title>Task Master</title>
 {% endblock %} {% block body %}
-<div class="content">
-  <h1>Task Master</h1>
 
-  <table>
-    <tr>
-      <th>Task</th>
-      <th>Added</th>
-      <th>Actions</th>
-    </tr>
-    {% for task in tasks %}
-    <tr>
-      <td>{{ task.content }}</td>
-      <td>{{ task.date_created.date() }}</td>
-      <td>
-        <a href="/delete/{{task.id}}">Delete</a>
-        <br />
-        <a href="/update/{{task.id}}">Update</a>
-      </td>
-    </tr>
-    {% endfor %}
-  </table>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Task</th>
+            <th scope="col">Status</th>
+            <th scope="col">Created</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for task in tasks %}
+          <tr>
+            <th scope="row" id="index">{{ loop.index }}</th>
+            <td>{{ task.content }}</td>
+            <td>
+              {% if task.completed %}
+              <span class="badge bg-success">Finished</span>
+              {% else %}
+              <span class="badge bg-danger">Open</span>
+              {% endif %}
+            </td>
 
-  <form action="/" method="POST">
-    <input type="text" name="content" id="content" placeholder="Do laundry" />
-    <input type="submit" value="Add Task" />
-  </form>
+            <td>{{ task.date_created.date() }}</td>
+            <td>
+              <div class="btn-group">
+                <a href="/delete/{{task.id}}" class="btn btn-outline-primary"
+                  >Delete</a
+                >
+                <a href="/update/{{task.id}}" class="btn btn-outline-primary"
+                  >Update</a
+                >
+                <a href="#" class="btn btn-outline-primary">Complate</a>
+              </div>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <form class="row g-2" action="/" method="POST">
+        <div class="col-auto">
+          <label for="content" class="visually-hidden">Task</label>
+          <input
+            class="col-auto form-control"
+            type="text"
+            name="content"
+            id="content"
+            placeholder="Do laundry"
+          />
+        </div>
+        <div class="col-auto">
+          <input class="btn btn-primary mb-3" type="submit" value="Add Task" />
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
 {% endblock %}
