Fixing minor issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                 <a href="/update/{{task.id}}" class="btn btn-outline-primary"
                   >Update</a
                 >
-                <a href="#" class="btn btn-outline-primary">Complate</a>
+                <a href="#" class="btn btn-outline-primary">Complete</a>
               </div>
             </td>
           </tr>
