--- a/templates/base.html
+++ b/templates/base.html
@@ -38,9 +38,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" aria-current="page" href="#">All Tasks</a>
-            <a class="nav-link" href="#">Finished Tasks</a>
-            <a class="nav-link" href="#">Open Tasks</a>
+            <a class="nav-link" aria-current="page" href="/all">All Tasks</a>
+            <a class="nav-link" href="/finished">Finished Tasks</a>
+            <a class="nav-link" href="/open">Open Tasks</a>
           </div>
         </div>
       </div>
